# edir

./: .gitignore  README.md  pyproject.toml
art/report/profiling/: report_train.html  report_validate.html
art/rgb/csv/raw/: image_manifest.csv
art/rgb/meta/raw/: gray_hist_cache.pkl  rgb_hist_cache.pkl
doc/: project.md
nbs/: 1-profiling.ipynb  eye_disease.py  eye_disease_v1.ipynb  eye_disease_v2.ipynb  eye_disease_v5.py
ref/: deploy.py  y_data_profiling.ipynb
ref/eye_diesease/: channel-analysis-notes.md  eye_disease_v1.ipynb  eye_disease_v2.ipynb  eye_disease_viva.md  notes.txt  sections_6.7-6.17_print_reference.md
res/rgb_v1/meta/aug/: image_manifest.csv
res/rgb_v1/meta/prep/: image_manifest.csv
res/rgb_v1/meta/raw/: image_manifest.csv
src/: __init__.py  app.py  context.md  final_eye_disease_classification.ipynb  model_deploy.py
