[project]
name = "edir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "setuptools~=81.0",
    "ydata-profiling>=4.6.0",
    "imagehash>=4.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.5,<=3.10",
    "numpy>=1.22",
    "opencv-python>=4.8",
    "pandas==2.3.3",
    "pillow>=12.1.1",
    "plotly>=5.0.0",
    "seaborn>=0.10.1,<0.14",
    "tqdm>=4.67.3",
    "cleanvision>=0.3.6",
    "split-folders>=0.5.1",
    "tensorflow>=2.15",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "streamlit>=1.28.0",
    "lime>=0.2.0",
    "scikit-image>=0.22.0",
]
